--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-/* Reset and base styles */
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Titillium Web", sans-serif;
 }
 
 body {
@@ -22,11 +23,16 @@ body {
     width: 100%;
     max-width: 500px;
 }
+.container:hover {
+    box-shadow: 0 0 20px white;
+}
 
 .container h1 {
     text-align: center;
     color: #333;
+    font-size: 2.7rem;
     margin-bottom: 1.5rem;
+    font-family: "Great Vibes", sans-serif;
 }
 
 .tabLabel {
@@ -57,6 +63,7 @@ body {
 form.tab {
     display: flex;
     flex-direction: column;
+    /* align-items: center; */
     gap: 1rem;
 }
 
@@ -83,8 +90,10 @@ form.tab input[type="checkbox"] {
 
 /* Buttons */
 form.tab button {
+    width: fit-content;
+    place-self: center;
     margin-top: 1rem;
-    padding: 10px;
+    padding: 12px 30px;
     border: none;
     font-size: 20px;
     background-color: #8a2be2;
@@ -101,6 +110,7 @@ form.tab button:hover {
 
 /* Error and success messages */
 #errorText {
-    font-size: 0.9rem;
+    font-size: 1rem;
     margin-top: -0.5rem;
+    font-weight: 700;
 }
